	(CygbuildCmdInstallCheckPerlFile): Display message only
	if perl notes found. Replace bang-slash line in better way
	by using tail command.
	(CygbuildCmdInstallCheckPerlLibraries): Adjust displayed
	message.
	(CygbuildInstallFixInterpreterPerl): Use variable retval.
	(CygbuildInstallFixInterpreterPython): Use variable retval.
	(CygbuildInstallFixPerlPacklist): Use variable retval.

	[ commit: 21c6baa ]

	* bin/cygbuild.sh: (CygbuildBootVariablesGlobalCacheSet): Move
	message. Clear CYGBUILD_CACHE_PERL_FILES if no cache can be set.
	(CygbuildPerlLibraryDependsCache): Check cache variable.

	[ commit: 0a6b221..6cc78b6 ]

	* bin/cygbuild.sh: REFACTORING: Convert all $LS, $MV etc.
	variables into regular calls in series of commits.

	[ up to commit: 0a6b221 ]

	* bin/cygbuild.pl: (HELP::QUICK OVERVIEW): Remove key id
	and use $GPGKEY variable in example.

	* README: Adjust short description.
	(Version control information): Add new topic.
	(Version control information): Moved from INSTALL.
	(Dependencies): Moved from INSTALL.

	* INSTALL: (Install instructions): Mention /usr/local and
	prefix= setting. Remove verything but install instructions.

	* Makefile: (install-etc-main-symlink): disable installing
	/etc/cygbuild/programs.conf. No longer used.
	(PL): Update location to etc/lib
	($(DOCDIR)/cygbuild-rebuild.1): Update location to
	doc/cygbuild-rebuild.pod.
	(install-in-place): Remove target `install-etc-main-symlink'.
	(FROM_ETC_DATA): New.
	(OBJS_ETC_DATA): New.
	(ETCDIR_DATA): New.
	(install-etc-dir-template): Add data/
	(install-etc-dir-structure): Renamed. Was `install-etc-dir-template'.
	(install-etc): Add `install-etc-data'.
	(install-in-place): Remove `install-man'.
	(install-template-symlinks): Renamed. Was `install-etc-template-symlink'.
	(install-share-data): Renamed. Was `install-etc-data'.
	(install-share-template): Renamed. Was `install-etc-template'.
	(install-share): Renamed. Was `install-etc'.
	(install-data-symlinks): New.