@@ -78,6 +78,10 @@
 	(CygbuildInstallFixInterpreterPerl): Use variable retval.
 	(CygbuildInstallFixInterpreterPython): Use variable retval.
 	(CygbuildInstallFixPerlPacklist): Use variable retval.
+	(CygbuildDefineGlobalCommands): New variables PERLBIN PYTHONBIN.
+	(CygbuildInstallFixInterpreterMain): Use PERLBIN PYTHONBIN.
+	(CygbuildCmdInstallCheckBinFiles): Use PERLBIN PYTHONBIN.
+	(CygbuildInstallFixInterpreterPython): Use PYTHONBIN.
 
 	[ commit: 21c6baa ]
 
